--- a/crew_rag_agent.ipynb
+++ b/crew_rag_agent.ipynb
@@ -660,7 +660,7 @@
       "cell_type": "code",
       "source": [
         "!pip install langchain-groq\n",
-        "#Api groq_Cloud = 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"
+        "#Api groq_Cloud = #######"
       ],
       "metadata": {
         "colab": {
@@ -1872,7 +1872,7 @@
     {
       "cell_type": "code",
       "source": [
-        "os.environ['GROQ_API_KEY'] = ('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')"
+        "os.environ['GROQ_API_KEY'] = ('#####')"
       ],
       "metadata": {
         "id": "1YFZ-lYWKDf3"
@@ -2506,7 +2506,7 @@
       "cell_type": "code",
       "source": [
         "#Tavily API key\n",
-        "os.environ[\"TAVILY_API_KEY\"] = ('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')\n",
+        "os.environ[\"TAVILY_API_KEY\"] = ('#####')\n",
         "web_search_tool = TavilySearchResults(k=3)"
       ],
       "metadata": {
